fix nav on mobile?

--- a/src/sass/partials/_structure.scss
+++ b/src/sass/partials/_structure.scss
@@ -35,7 +35,7 @@
 }
 
 .uit-mobile-nav {
-    top: 0;
+    top: -200px;
     width: 100%;
     z-index: 100;
     box-sizing: border-box;
@@ -46,10 +46,10 @@
     border-bottom: 1px solid black;
     position: fixed;
     background-color: $c-white;
-    padding: 0 10px;
+    padding: 200px 10px 0;
 
     @include mq(mobileLandscape) {
-        padding: 0 20px;
+        padding: 200px 20px 0;
     }
 
     @include mq(tablet) {
